--- a/src/REstate.Service.AdminUI/wwwroot/styles.css
+++ b/src/REstate.Service.AdminUI/wwwroot/styles.css
@@ -1,7 +1,7 @@
 body {
   padding-top: 70px;
 }
-
-div#json-editor h3 {
-    /* font-size: 29px; */
+  
+a.navbar-brand {
+    background-color: #D84315;
 }
