--- a/src/REstate.Web.Auth/Views/login.html
+++ b/src/REstate.Web.Auth/Views/login.html
@@ -224,7 +224,7 @@
             color: #fff;
             font-size: 18Px;
             font-weight: bold;
-            text-shadow: 0Px -1Px 0Px #5b6ddc;
+            text-shadow: 0Px -1Px 0Px #546E7A;
             outline: none;
             border: 1Px solid rgba(0, 0, 0, .49);
             -webkit-background-cliP: Padding-box;
@@ -232,13 +232,13 @@
             background-clip: Padding-box;
             border-radius: 6Px;
             background-color: #5466da;
-            background-image: -webkit-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-            background-image: -moz-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-            background-image: -o-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-            background-image: -ms-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-            background-image: linear-gradient(bottom, #5466da 0%, #768ee4 100%);
-            -webkit-box-shadow: inset 0Px 1Px 0Px #9ab1ec;
-            box-shadow: inset 0Px 1Px 0Px #9ab1ec;
+            background-image: -webkit-linear-gradient(bottom, #546E7A 0%, #78909C 100%);
+            background-image: -moz-linear-gradient(bottom, #546E7A 0%, #78909C 100%);
+            background-image: -o-linear-gradient(bottom, #546E7A 0%, #78909C 100%);
+            background-image: -ms-linear-gradient(bottom, #546E7A 0%, #78909C 100%);
+            background-image: linear-gradient(bottom, #546E7A 0%, #78909C 100%);
+            -webkit-box-shadow: inset 0Px 1Px 0Px #90A4AE;
+            box-shadow: inset 0Px 1Px 0Px #90A4AE;
             cursor: Pointer;
             -webkit-transition: all .1s ease-in-out;
             -moz-transition: all .1s ease-in-out;
@@ -248,26 +248,26 @@
         }
 
             #slick-login input[type="submit"]:hover {
-                background-color: #5f73e9;
-                background-image: -webkit-linear-gradient(bottom, #5f73e9 0%, #859bef 100%);
-                background-image: -moz-linear-gradient(bottom, #5f73e9 0%, #859bef 100%);
-                background-image: -o-linear-gradient(bottom, #5f73e9 0%, #859bef 100%);
-                background-image: -ms-linear-gradient(bottom, #5f73e9 0%, #859bef 100%);
-                background-image: linear-gradient(bottom, #5f73e9 0%, #859bef 100%);
-                -webkit-box-shadow: inset 0Px 1Px 0Px #aab9f4;
-                box-shadow: inset 0Px 1Px 0Px #aab9f4;
+                background-color: #607D8B;
+                background-image: -webkit-linear-gradient(bottom, #607D8B 0%, #90A4AE 100%);
+                background-image: -moz-linear-gradient(bottom, #607D8B 0%, #90A4AE 100%);
+                background-image: -o-linear-gradient(bottom, #607D8B 0%, #90A4AE 100%);
+                background-image: -ms-linear-gradient(bottom, #607D8B 0%, #90A4AE 100%);
+                background-image: linear-gradient(bottom, #607D8B 0%, #90A4AE 100%);
+                -webkit-box-shadow: inset 0Px 1Px 0Px #CFD8DC;
+                box-shadow: inset 0Px 1Px 0Px #CFD8DC;
                 margin-top: 10Px;
             }
 
             #slick-login input[type="submit"]:active {
                 background-color: #7588e1;
-                background-image: -webkit-linear-gradient(bottom, #7588e1 0%, #7184df 100%);
-                background-image: -moz-linear-gradient(bottom, #7588e1 0%, #7184df 100%);
-                background-image: -o-linear-gradient(bottom, #7588e1 0%, #7184df 100%);
-                background-image: -ms-linear-gradient(bottom, #7588e1 0%, #7184df 100%);
-                background-image: linear-gradient(bottom, #7588e1 0%, #7184df 100%);
-                -webkit-box-shadow: inset 0Px 1Px 0Px #93a9e9;
-                box-shadow: inset 0Px 1Px 0Px #93a9e9;
+                background-image: -webkit-linear-gradient(bottom, #78909C 0%, #607D8B 100%);
+                background-image: -moz-linear-gradient(bottom, #78909C 0%, #607D8B 100%);
+                background-image: -o-linear-gradient(bottom, #78909C 0%, #607D8B 100%);
+                background-image: -ms-linear-gradient(bottom, #78909C 0%, #607D8B 100%);
+                background-image: linear-gradient(bottom, #78909C 0%, #607D8B 100%);
+                -webkit-box-shadow: inset 0Px 1Px 0Px #B0BEC5;
+                box-shadow: inset 0Px 1Px 0Px #B0BEC5;
             }
     </style>
 </head>
