--- a/src/REstate.Service.AdminUI/wwwroot/css/bootstrap-material-design.css
+++ b/src/REstate.Service.AdminUI/wwwroot/css/bootstrap-material-design.css
@@ -78,8 +78,9 @@ h6 {
 a,
 a:hover,
 a:focus {
-  color: #FF5722;
+  color: #424242;
 }
+
 a .material-icons,
 a:hover .material-icons,
 a:focus .material-icons {
@@ -213,7 +214,7 @@ body .container-fluid .jumbotron-danger {
 }
 .btn:not(.btn-raised).btn-primary,
 .input-group-btn .btn:not(.btn-raised).btn-primary {
-  color: #FF5722;
+  color: #424242;
 }
 .btn:not(.btn-raised).btn-success,
 .input-group-btn .btn:not(.btn-raised).btn-success {
@@ -273,7 +274,7 @@ body .container-fluid .jumbotron-danger {
 .input-group-btn .btn.btn-fab.btn-primary,
 .btn-group-raised .btn.btn-primary,
 .btn-group-raised .input-group-btn .btn.btn-primary {
-  background-color: #FF5722;
+  background-color: #424242;
   color: rgba(255,255,255, 0.84);
 }
 .btn.btn-raised.btn-success,
@@ -780,7 +781,7 @@ fieldset[disabled][disabled] .btn-group-vertical.btn-group-raised:focus:not(:act
 }
 .btn-group.open > .dropdown-toggle.btn.btn-primary,
 .btn-group-vertical.open > .dropdown-toggle.btn.btn-primary {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .btn-group.open > .dropdown-toggle.btn.btn-success,
 .btn-group-vertical.open > .dropdown-toggle.btn.btn-success {
@@ -919,12 +920,12 @@ label.checkbox-inline input[type=checkbox]:focus + .checkbox-material .check:aft
 }
 .checkbox input[type=checkbox]:checked + .checkbox-material .check,
 label.checkbox-inline input[type=checkbox]:checked + .checkbox-material .check {
-  color: #FF5722;
-  border-color: #FF5722;
+  color: #424242;
+  border-color: #424242;
 }
 .checkbox input[type=checkbox]:checked + .checkbox-material .check:before,
 label.checkbox-inline input[type=checkbox]:checked + .checkbox-material .check:before {
-  color: #FF5722;
+  color: #424242;
   -webkit-box-shadow: 0 0 0 10px, 10px -10px 0 10px, 32px 0 0 20px, 0px 32px 0 20px, -5px 5px 0 10px, 20px -12px 0 11px;
           box-shadow: 0 0 0 10px, 10px -10px 0 10px, 32px 0 0 20px, 0px 32px 0 20px, -5px 5px 0 10px, 20px -12px 0 11px;
   -webkit-animation: checkbox-on 0.3s forwards;
@@ -1356,7 +1357,7 @@ fieldset[disabled] .form-group.is-focused .togglebutton label {
   background-color: rgba(0, 150, 136, 0.5);
 }
 .togglebutton label input[type=checkbox]:checked + .toggle:after {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .togglebutton label input[type=checkbox]:checked + .toggle:active:after {
   -webkit-box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.4), 0 0 0 15px rgba(0, 150, 136, 0.1);
@@ -1405,7 +1406,7 @@ label.radio-inline .check {
   height: 15px;
   width: 15px;
   border-radius: 100%;
-  background-color: #FF5722;
+  background-color: #424242;
   -webkit-transform: scale3d(0, 0, 0);
           transform: scale3d(0, 0, 0);
 }
@@ -1453,11 +1454,11 @@ label.radio-inline input[type=radio]:checked ~ .circle {
 }
 .radio input[type=radio]:checked ~ .check,
 label.radio-inline input[type=radio]:checked ~ .check {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .radio input[type=radio]:checked ~ .circle,
 label.radio-inline input[type=radio]:checked ~ .circle {
-  border-color: #FF5722;
+  border-color: #424242;
 }
 .radio input[type=radio]:checked ~ .check,
 label.radio-inline input[type=radio]:checked ~ .check {
@@ -1683,7 +1684,7 @@ output {
   background-color: #3f51b5;
 }
 .label.label-primary {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .label.label-success {
   background-color: #4caf50;
@@ -1700,10 +1701,10 @@ output {
 .form-control,
 .form-group .form-control {
   border: 0;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#FF5722), to(#FF5722)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2));
-  background-image: -webkit-linear-gradient(#FF5722, #FF5722), -webkit-linear-gradient(#D2D2D2, #D2D2D2);
-  background-image: -o-linear-gradient(#FF5722, #FF5722), -o-linear-gradient(#D2D2D2, #D2D2D2);
-  background-image: linear-gradient(#FF5722, #FF5722), linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#424242), to(#424242)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2));
+  background-image: -webkit-linear-gradient(#424242, #424242), -webkit-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: -o-linear-gradient(#424242, #424242), -o-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: linear-gradient(#424242, #424242), linear-gradient(#D2D2D2, #D2D2D2);
   -webkit-background-size: 0 2px, 100% 1px;
           background-size: 0 2px, 100% 1px;
   background-repeat: no-repeat;
@@ -1772,10 +1773,10 @@ fieldset[disabled] .form-group .form-control {
 }
 .form-group.is-focused .form-control {
   outline: none;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#FF5722), to(#FF5722)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2));
-  background-image: -webkit-linear-gradient(#FF5722, #FF5722), -webkit-linear-gradient(#D2D2D2, #D2D2D2);
-  background-image: -o-linear-gradient(#FF5722, #FF5722), -o-linear-gradient(#D2D2D2, #D2D2D2);
-  background-image: linear-gradient(#FF5722, #FF5722), linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#424242), to(#424242)), -webkit-gradient(linear, left top, left bottom, from(#D2D2D2), to(#D2D2D2));
+  background-image: -webkit-linear-gradient(#424242, #424242), -webkit-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: -o-linear-gradient(#424242, #424242), -o-linear-gradient(#D2D2D2, #D2D2D2);
+  background-image: linear-gradient(#424242, #424242), linear-gradient(#D2D2D2, #D2D2D2);
   -webkit-background-size: 100% 2px, 100% 1px;
           background-size: 100% 2px, 100% 1px;
   -webkit-box-shadow: none;
@@ -1785,11 +1786,11 @@ fieldset[disabled] .form-group .form-control {
           transition-duration: 0.3s;
 }
 .form-group.is-focused .form-control .material-input:after {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .form-group.is-focused label,
 .form-group.is-focused label.control-label {
-  color: #FF5722;
+  color: #424242;
 }
 .form-group.is-focused.label-placeholder label,
 .form-group.is-focused.label-placeholder label.control-label {
@@ -2435,12 +2436,12 @@ fieldset[disabled] .navbar .btn-link:focus {
 .navbar.navbar-default .dropdown-menu li > a:hover,
 .navbar .dropdown-menu li > a:focus,
 .navbar.navbar-default .dropdown-menu li > a:focus {
-  color: #FF5722;
+  color: #D84315;
   background-color: #eeeeee;
 }
 .navbar .dropdown-menu .active > a,
 .navbar.navbar-default .dropdown-menu .active > a {
-  background-color: #FF5722;
+  background-color: #424242;
   color: rgba(255,255,255, 0.84);
 }
 .navbar .dropdown-menu .active > a:hover,
@@ -2486,7 +2487,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: #ffffff;
 }
 .navbar.navbar-primary {
-  background-color: #FF5722;
+  background-color: #424242;
   color: rgba(255,255,255, 0.84);
 }
 .navbar.navbar-primary .navbar-form .form-group input.form-control::-moz-placeholder,
@@ -2510,11 +2511,11 @@ fieldset[disabled] .navbar .btn-link:focus {
 }
 .navbar.navbar-primary .dropdown-menu li > a:hover,
 .navbar.navbar-primary .dropdown-menu li > a:focus {
-  color: #FF5722;
+  color: #D84315;
   background-color: #eeeeee;
 }
 .navbar.navbar-primary .dropdown-menu .active > a {
-  background-color: #FF5722;
+  background-color: #424242;
   color: rgba(255,255,255, 0.84);
 }
 .navbar.navbar-primary .dropdown-menu .active > a:hover,
@@ -2695,7 +2696,7 @@ fieldset[disabled] .navbar .btn-link:focus {
 }
 .dropdown-menu li a:hover {
   background-color: transparent;
-  color: #FF5722;
+  color: #424242;
 }
 .alert {
   border: 0;
@@ -2721,7 +2722,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: #ffffff;
 }
 .alert.alert-primary {
-  background-color: #FF5722;
+  background-color: #424242;
   color: rgba(255,255,255, 0.84);
 }
 .alert.alert-primary a,
@@ -2783,13 +2784,13 @@ fieldset[disabled] .navbar .btn-link:focus {
 }
 .progress .progress-bar,
 .progress .progress-bar.progress-bar-default {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .progress .progress-bar.progress-bar-inverse {
   background-color: #3f51b5;
 }
 .progress .progress-bar.progress-bar-primary {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .progress .progress-bar.progress-bar-success {
   background-color: #4caf50;
@@ -2807,7 +2808,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: #ff5722;
 }
 .text-primary {
-  color: #FF5722;
+  color: #424242;
 }
 .text-danger {
   color: #f44336;
@@ -2819,7 +2820,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   color: #03a9f4;
 }
 .nav-tabs {
-  background: #FF5722;
+  background: #424242;
 }
 .nav-tabs > li > a {
   color: #FFFFFF;
@@ -2980,7 +2981,7 @@ fieldset[disabled] .navbar .btn-link:focus {
   background-color: #3f51b5;
 }
 .panel.panel-primary > .panel-heading {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .panel.panel-success > .panel-heading {
   background-color: #4caf50;
@@ -3199,13 +3200,13 @@ hr.on-light {
 }
 .slider.noUi-connect,
 .slider.slider-default.noUi-connect {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .slider.slider-inverse.noUi-connect {
   background-color: #3f51b5;
 }
 .slider.slider-primary.noUi-connect {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .slider.slider-success.noUi-connect {
   background-color: #4caf50;
@@ -3221,13 +3222,13 @@ hr.on-light {
 }
 .slider .noUi-connect,
 .slider.slider-default .noUi-connect {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .slider.slider-inverse .noUi-connect {
   background-color: #3f51b5;
 }
 .slider.slider-primary .noUi-connect {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .slider.slider-success .noUi-connect {
   background-color: #4caf50;
@@ -3243,13 +3244,13 @@ hr.on-light {
 }
 .slider .noUi-handle,
 .slider.slider-default .noUi-handle {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .slider.slider-inverse .noUi-handle {
   background-color: #3f51b5;
 }
 .slider.slider-primary .noUi-handle {
-  background-color: #FF5722;
+  background-color: #424242;
 }
 .slider.slider-success .noUi-handle {
   background-color: #4caf50;
@@ -3265,13 +3266,13 @@ hr.on-light {
 }
 .slider .noUi-handle,
 .slider.slider-default .noUi-handle {
-  border-color: #FF5722;
+  border-color: #424242;
 }
 .slider.slider-inverse .noUi-handle {
   border-color: #3f51b5;
 }
 .slider.slider-primary .noUi-handle {
-  border-color: #FF5722;
+  border-color: #424242;
 }
 .slider.slider-success .noUi-handle {
   border-color: #4caf50;
