Editor and list components

--- a/src/REstate.Service.AdminUI/wwwroot/app/navbar.component.html
+++ b/src/REstate.Service.AdminUI/wwwroot/app/navbar.component.html
@@ -13,6 +13,8 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a [routerLink]="['Home']">Home</a></li>
+                <li><a [routerLink]="['MachineList']">Machines</a></li>
+                <li><a [routerLink]="['MachineEditor']">Editor</a></li>
                 <li><a [routerLink]="['About']">About</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li class="dropdown">
