--- a/src/REstate.Service.AdminUI/wwwroot/css/bootstrap-material-design.css
+++ b/src/REstate.Service.AdminUI/wwwroot/css/bootstrap-material-design.css
@@ -406,7 +406,7 @@ body .container-fluid .jumbotron-danger {
 .input-group-btn .btn.btn-raised:not(.btn-link):active.btn-primary,
 .btn-group-raised .btn:not(.btn-link):active.btn-primary,
 .btn-group-raised .input-group-btn .btn:not(.btn-link):active.btn-primary {
-  background-color: #00aa9a;
+  background-color: #424242;
 }
 .btn.btn-raised:not(.btn-link):hover.btn-success,
 .input-group-btn .btn.btn-raised:not(.btn-link):hover.btn-success,
